--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ num-traits = "0.2.19"
 # secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
 rand = "0.8"
 bitcoin = { version = "0.32.8", features = ["rand"]}
+bitcoincore-rpc = "0.19.0"
